Update to Play 2.8.0